--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <img class="logo" src="./img/logo.png" alt="logo">
             <div>
-                <button class="lang-btn"><i class="fa-solid fa-globe"></i> English <img src="./Assets/down-icon.png"></button>
+                <button class="lang-btn"><i class="fa-solid fa-globe"></i> English <img src="./img/down-icon.png"></button>
                 <button>Sign In</button>
             </div>
         </nav>
