--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/391827d54c.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href=".Netflix/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Netflix/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
 </head>
 <body>
     <div class="header">
         <nav>
-            <img class="logo" src=".Netflix/img/logo.png" alt="logo">
+            <img class="logo" src="./Netflix/img/logo.png" alt="logo">
             <div>
-                <button class="lang-btn"><i class="fa-solid fa-globe"></i> English <img src=".Netflix/img/down-icon.png"></button>
+                <button class="lang-btn"><i class="fa-solid fa-globe"></i> English <img src="./Netflix/img/down-icon.png"></button>
                 <button>Sign In</button>
             </div>
         </nav>
@@ -37,12 +37,12 @@
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
             <div class="img-col">
-                <img src=".Netflix/img/feature-1.png" alt="feature-1">
+                <img src="./Netflix/img/feature-1.png" alt="feature-1">
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src=".Netflix/img/feature-2.png" alt="feature-2">
+                <img src="./Netflix/img/feature-2.png" alt="feature-2">
             </div>
             <div class="text-col">
                 <h2>Download your shows to watch offline.</h2>
@@ -55,12 +55,12 @@
                 <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
             </div>
             <div class="img-col">
-                <img src=".Netflix/img/feature-3.png" alt="feature-3">
+                <img src="./Netflix/img/feature-3.png" alt="feature-3">
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src=".Netflix/img/feature-4.png" alt="feature-4">
+                <img src="./Netflix/img/feature-4.png" alt="feature-4">
             </div>
             <div class="text-col">
                 <h2>Create profiles for children.</h2>
@@ -160,7 +160,7 @@
             </div>
         </div>
 
-        <button class="lang-btn"><i class="fa-solid fa-globe"></i> English <img src=".Netflix/img/down-icon.png"></button>
+        <button class="lang-btn"><i class="fa-solid fa-globe"></i> English <img src="./Netflix/img/down-icon.png"></button>
 
         <p class="copyright-text">Netflix India</p>
     </div>
